--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -1,98 +1,22 @@
+@import "./common.scss";
+
 body {
+    margin: 8px;
     min-height: 200px;
     width: 260px;
-    font-size: 14px;
-    font-family: Roboto, 'sans-serif';
-}
-
-button {
-    border: none;
-    background: none;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-.timeSpanButtons {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 32px;
-    width: 100%;
-    gap: 2px;
-
-    button {
-        position: relative;
-    }
-
-    button:hover {
-        background: #E5E5E5;
-    }
-
-    button.active {
-        font-weight: 600;
-        border-radius: 3px 3px 0px 0px;
-    }
-
-    button.active::after {
-        content: "";
-        display: block;
-        position: absolute;
-        width: 100%;
-        height: 2px;
-        background: #227C9D;
-        bottom: -2px;
-        left: 0;
-    }
-}
-
-.timeCircle {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    margin: 16px 0;
-
-    span {
-        position: absolute;
-    }
-
-    .timeSpan {
-        top: 68px;
-    }
-
-    .netTime {
-        top: 88px;
-        font-size: 1.6em;
-        font-weight: 500;
-    }
 }
 
 .appTime {
     margin: 16px 8px;
+}
 
-    .app {
-        display: grid;
-        grid-template-columns: 14px auto 72px;
-        grid-template-rows: auto;
-        width: 100%;
-        gap: 8px;
-        align-items: center;
-        margin: 8px auto;
-
-        .bubble {
-            width: 14px;
-            height: 14px;
-            border-radius: 100%;
-        }
-
-        .url {
-            font-weight: 500;
-            max-width: 100%;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-        }
-
-        .time {
-            text-align: right;
-        }
+.moreInfoBtn {
+    width: 100%;
+    text-align: center;
+    padding: 4px;
+    border: 1px solid #C4C4C4;
+    
+    &:hover {
+        background-color: #E5E5E5;
     }
 }
