Add more standartized fonts

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 14px;
-    font-family: Roboto, 'sans-serif';
+    font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 button {
